# flavorpack

./: .codecov.yml  .gitignore  AGENTS.md  Makefile.backup.20251110  README.md  build.sh  fix_future_imports.py  fix_indentation.py  helpers  mkdocs.yml  pyproject.toml  test-windows-ci.sh
.github/scripts/: analyze_pe_binaries.ps1  analyze_pe_binaries.py  build-flavor-self.sh  build-platform-wheel.sh  build-pretaster.sh  build-taster-with-psp.sh  create-pretaster-matrix.sh  download-helpers.sh  generate-pspf-compatibility-report.sh  get-helper-run.sh  get-release-runs.sh  get-version.sh  organize-release-packages.sh  organize-release-wheels.sh  prepare-release.sh  run-pretaster-tests.sh  run-tests.sh  setup-python-workenv.sh  test-binaries.ps1  test-binaries.sh  test-flavor-self-contained.sh  test-metadata.py  test-taster-basic.sh  test-taster-self-package.sh  validate-release-artifacts.sh  validate-release-version.sh
.github/workflows/: 01-helper-prep.yml  02-pretaster-pipeline.yml  03-flavor-pipeline.yml  04-taster-pipeline.yml  05-code-quality.yml  06-security-scan.yml  07-dependency-audit.yml  08-license-compliance.yml  compatibility-check.yml  release-pipeline.yml
docs/: index.md  roadmap.md
docs/api/: builder.md  crypto.md  index.md  packaging.md  reader.md
docs/archive/: AGENTS.md  RESEARCH_GO_COMPILER_OPTIONS.md
docs/community/: blog.md  changelog.md  contributing.md  discussions.md  index.md  license.md  support.md
docs/cookbook/: index.md
docs/development/: architecture.md  ci-cd.md  contributing.md  helpers.md  index.md  release.md
docs/explanation/: architecture.md
docs/getting-started/: examples.md  first-package.md  index.md  installation.md  quickstart.md
docs/guide/: index.md  roadmap.md
docs/includes/: platform-support.md
docs/reference/: glossary.md  requirements.md
docs/resources/: index.md
docs/troubleshooting/: common.md  errors.md  faq.md  index.md
docs/tutorials/: httpie-wrapper.md  index.md
keys/: flavor-private.key  flavor-public.key
src/: 20251101-1209-continuing-to-working-through-that-win-thang.txt
src/flavor/: __init__.py  __main__.py  cache.py  cli.py  console.py  exceptions.py  locking.py  output.py  package.py  verification.py
src/flavor-go/: Makefile  README.md  coverage.out  go.mod  go.sum
src/flavor-rs/: Cargo.toml  Makefile  build.rs  test.json
src/flavor-rs/src/: api.rs  exceptions.rs  exit_codes.rs  lib.rs  logger.rs  version.rs
src/flavor-rs/src/psp/: mod.rs
src/flavor-rs/src/psp/format_2025/: backends.rs  checksums.rs  cli.rs  constants.rs  crypto.rs  debug.rs  defaults.rs  extraction.rs  index.rs  keys.rs  locking.rs  manifest.rs  metadata.rs  mod.rs  operations.rs  packaging.rs  paths.rs  pe_resources.rs  pe_utils.rs  reader.rs  runtime.rs  slots.rs  verifier.rs
src/flavor-rs/src/psp/format_2025/builder/: finalization.rs  keys.rs  metadata.rs  mod.rs  slot_processor.rs
src/flavor-rs/src/psp/format_2025/execution/: commands.rs  mod.rs  placeholders.rs  validation.rs
src/flavor-rs/src/psp/format_2025/launcher/: command.rs  extraction.rs  filesystem.rs  mod.rs  workenv.rs
src/flavor-rs/src/psp/format_2025/testdata/: test_vectors.json
src/flavor-rs/src/psp/operations/: chain.rs  mod.rs  operation.rs
src/flavor-rs/src/utils/: mod.rs  xor.rs
src/flavor-rs/src/workenv/: directories.rs  mod.rs  validation.rs
tests/: conftest.py  json_comparison.py  test_extract_command.py  test_inspect_command.py  test_locking.py  test_module_imports.py  test_output.py  test_verification.py
tests/api/: test_api.py
tests/assets/: handshake_client.py
tests/cache/: test_cache_management.py
tests/cli/: test_cli.py  test_cli_coverage.py  test_helpers_list_build.py  test_helpers_ops.py  test_main_module.py  test_utils_command.py
tests/config/: test_foundation_config.py
tests/format_2025/: __init__.py  test_bundle_execution.py  test_environment_runtime_ops.py  test_extraction_core.py  test_extraction_ops.py  test_handlers_archive.py  test_handlers_errors.py  test_handlers_operations.py  test_keys_resolution.py  test_launcher_execution.py  test_metadata_assembly.py  test_metadata_validation.py  test_mmap_backends.py  test_operation_chains.py  test_pe_utils.py  test_platform_environment.py  test_platform_placeholders.py  test_protobuf_json_comparison.py  test_pspf_2025_backends.py  test_pspf_2025_builder.py  test_pspf_2025_core.py  test_pspf_2025_enhanced.py  test_pspf_2025_integration.py  test_pspf_2025_reader_backends.py  test_pspf_2025_security.py  test_pspf_2025_slots_lifecycle.py  test_pspf_2025_slots_ops.py  test_pspf_builder_integration.py  test_pspf_builder_spec.py  test_workenv_commands.py  test_workenv_core.py  test_workenv_directories.py
tests/helpers/: test_binary_loader_build.py  test_binary_loader_helpers.py  test_helper_manager.py  test_helper_manager_ops.py
tests/integration/: test_pretaster_integration.py
tests/mmap/: test_mmap_edge_cases.py  test_mmap_performance_core.py  test_mmap_performance_resources.py
tests/packaging/: test_keys.py  test_orchestrator.py  test_orchestrator_helpers_core.py  test_orchestrator_helpers_finders.py  test_orchestrator_helpers_manifests.py  test_uv_download.py
tests/taster/: PSP_READER_DOCUMENTATION.md  PSP_READER_TEST_RESULTS.md  README.md  SIGNATURE_VERIFICATION_RESULTS.md  psp-reader.sh  pyproject.toml
tests/taster/configs/: taster-go.json
tests/taster/configs/keys/: flavor-private.key  flavor-public.key
tests/taster/keys/: flavor-private.key  flavor-public.key
tests/taster/src/taster/: __init__.py  cli.py  test_manifest.toml
tests/taster/src/taster/commands/: __init__.py  argv.py  benchmark.py  cache.py  crosslang.py  echo.py  env.py  exec_test.py  exit.py  features.py  file.py  info.py  launcher_test.py  metadata.py  mmap.py  package.py  pipe.py  shell.py  signals.py  slot_test.py  test.py  verify.py
tests/taster/tests/: __init__.py  test_cross_language_operations.py  test_crosslang.py  test_hypothesis_breaking.py  test_verify_json.py
tools/: build_wheel.py  embed_helpers.py  release.py  update-version.sh  validate_wheel.py
(+247 files in other folders)
