# Requires Rust 1.85+ for edition 2024

[package]
name = "flavor"
version = "0.3.0"
edition = "2024"
authors = ["provide.io <code@provide.io>", "Tim Perkins <code@tim.life>"]
description = "Progressive Secure Package Format (PSPF) Reference Implementation"
license = "Apache-2.0"
rust-version = "1.85"

[lib]
name = "flavor"
path = "src/lib.rs"

[[bin]]
name = "flavor-rs-launcher"
path = "src/bin/flavor-rs-launcher.rs"

[[bin]]
name = "flavor-rs-builder"
path = "src/bin/flavor-rs-builder.rs"

[dependencies]
anyhow = "1.0"
tar = "0.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
adler = "1.0"
tempfile = "3.0"
ed25519-dalek = { version = "2.1" }
pem = "3.0"
log = "0.4"
env_logger = "0.11"
glob = "0.3"
signal-hook = "0.3"
libc = "0.2"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
bincode = "1.3"
gethostname = "0.5"
memmap2 = "0.9"
hex = "0.4"
which = "6.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices"
] }

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"