[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taster"
dynamic = ["version"]
description = "Test package for flavor functionality"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Tim Perkins", email = "code@tim.life" },
]
maintainers = [
    { name = "provide.io", email = "code@provide.io" },
]
dependencies = [
    "provide-foundation[all]",
]

[project.scripts]
taster = "taster.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["taster*"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.flavor]
name = "taster"
version = "1.0.0"
entry_point = "taster.cli:main"

[tool.flavor.build]
dependencies = ["../.."]

[tool.flavor.execution]
# Runtime environment configuration for testing
[tool.flavor.execution.runtime]
[tool.flavor.execution.runtime.env]
# Default: clean environment with essentials only
unset = ["*"]
pass = [
    "PATH",
    "HOME",
    "USER",
    "TERM",
    "LANG",
    "LC_*",
    "FLAVOR_*",
    "TASTER_*",  # Allow taster-specific vars
    "KEEP_*"     # For testing preservation
]
set = { "TASTER_MODE" = "test", "TASTER_VERSION" = "1.0.0" }
# Example mapping for testing
map = { "OLD_VAR" = "NEW_VAR" }

[dependency-groups]
dev = [
    "provide-testkit[standard,build]",
    "hypothesis>=6.138.14",
]
docs = [
    "provide-testkit[docs]",
]
